tests/out/error/redef/fun.in.bt
fun foo(a string){}

fun foo(b bool){}

fun foo(c i32, d i32) i32 {
	return 0
}

fun foo[X](x X) {}
